Project

General

Profile

Actions

Bug #1430

closed

blkdev crashes on synchronous flushes

Added by Alexey Zaytsev about 12 years ago. Updated over 11 years ago.

Status:
Resolved
Priority:
High
Category:
kernel
Start date:
2011-08-30
Due date:
% Done:

0%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

common/io/blkdev/blkdev.c:bd_ioctl should check for dkc->dkc_callback in the DKIOCFLUSHWRITECACHE case.
Otherwise, we crash at synchronous flushes.

Actions #1

Updated by Alexey Zaytsev about 12 years ago

  • Subject changed from vioblk crashes on synchronous flushes. to blkdev crashes on synchronous flushes.
Actions #2

Updated by Alexey Zaytsev over 11 years ago

  • Subject changed from blkdev crashes on synchronous flushes. to blkdev crashes on synchronous flushes
Actions #3

Updated by Alexey Zaytsev over 11 years ago

  • Status changed from New to Resolved
Actions

Also available in: Atom PDF